node done start with react

--- a/Nodejs/nodejss/public/styles.css
+++ b/Nodejs/nodejss/public/styles.css
@@ -63,7 +63,36 @@ h3{
 }
 
 /* index styles */
+.blog a{
+    display: block;
+    margin: 40px 0;
+    padding-left: 30px;
+    border-left: 6px solid crimson;
+}
+
+.blog a:hover h3{
+    color: crimson;
+}
 /* details styles */
+.details{
+    position: relative;
+}
+
+.delete{
+    position: absolute;
+    top: 0;
+    right: 0;
+    border-radius: 50%;
+    padding: 8px; 
+}
+
+.delete:hover{
+    cursor: pointer;
+    background: rgb(241, 241, 241);
+    color: crimson;
+    box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+    transform: scale(1.1);
+}
 
 /* create styles */
 .create-blog form{
