--- a/Nodejs/views/blogs/create.ejs
+++ b/Nodejs/views/blogs/create.ejs
@@ -8,11 +8,11 @@
     
     <div class="create-blog content">
         <form action="/blogs" method="POST">
-            <label for="title">Blog title:</label>
+            <label for="title">Your Name:</label>
             <input type="text" id="title" name="title" required>
-            <label for="snippet">Blog Snippet:</label>
+            <label for="snippet">Your Details:</label>
             <input type="text" id="title" name="snippet" required>
-            <label for="body">Blog Body</label>
+            <label for="body">Dishes You Cook: </label>
             <textarea id="body" name="body" required></textarea>
             <button>Submit</button>
         </form>    
