--- a/Nodejs/views/partials/head.ejs
+++ b/Nodejs/views/partials/head.ejs
@@ -2,5 +2,5 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>Ninja Blog | <%= title %></title>
+    <title>Chef's Blog | <%= title %></title>
 </head>
