--- a/Amazon Full Stack/frontend/src/index.css
+++ b/Amazon Full Stack/frontend/src/index.css
@@ -62,6 +62,9 @@ ul {
 li {
   margin-top: 1rem;
 }
+input,
+select,
+textarea,
 button {
   padding: 1rem;
   border-radius: 0.5rem;
@@ -70,9 +73,14 @@ button {
   font-family: Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+button {
   background-color: #f8f8f8;
   cursor: pointer;
 }
+input:hover,
+select:hover,
+textarea:hover,
 button:hover {
   border: 0.1rem #404040 solid;
 }
@@ -92,6 +100,14 @@ a.brand {
   font-size: 3rem;
   font-weight: bold;
 }
+.badge {
+  background-color: #f02020;
+  color: #ffffff;
+  border-radius: 50%;
+  padding: 0.2rem 0.7rem;
+  font-size: 1.4rem;
+  margin-left: 0.2rem;
+}
 .row {
   display: flex;
   flex-wrap: wrap;
@@ -110,10 +126,17 @@ a.brand {
 .col-2 {
   flex: 2 1 50rem;
 }
+.min-30 {
+  min-width: 30rem;
+}
 
 /* Image */
 img {
   border-radius: 0.5rem;
+}
+img.small {
+  max-width: 5rem;
+  width: 100%;
 }
 img.medium {
   max-width: 29rem;
@@ -151,22 +174,19 @@ img.large {
 .success {
   color: #20a020;
 }
-.error {
+.danger {
   color: #a02020;
 }
-.danger{
+.alert {
   padding: 1rem;
-  border:0.1rem solid transparent;
+  border: 0.1rem solid transparent;
   border-radius: 0.5rem;
 }
-
-.alert-info{
+.alert-info {
   color: #2020a0;
-  background: #e0e0ff;
+  background-color: #e0e0ff;
 }
-
-.alert-danger{
+.alert-danger {
   color: #a02020;
-  background-color: #ffe0e0e0;
+  background-color: #ffe0e0;
 }
-
