done til payment

--- a/Amazon Full Stack/frontend/src/index.css
+++ b/Amazon Full Stack/frontend/src/index.css
@@ -171,10 +171,9 @@ img.large {
   color: #404040;
 }
 /* Alert */
-.loading{
+.loading {
   display: block !important;
 }
-
 .success {
   color: #20a020;
 }
@@ -194,6 +193,10 @@ img.large {
   color: #a02020;
   background-color: #ffe0e0;
 }
+.alert-success {
+  color: #20a020;
+  background-color: #eeffe0;
+}
 /* Form */
 .form {
   max-width: 60rem;
@@ -206,7 +209,6 @@ img.large {
 }
 .form label {
   margin: 1rem 0;
-  display: block;
 }
 /* Dropdown */
 .dropdown {
@@ -227,4 +229,16 @@ img.large {
 }
 .dropdown:hover .dropdown-content {
   display: block;
+}
+/* Checkout Steps */
+.checkout-steps > div {
+  border-top: 0.3rem #c0c0c0 solid;
+  color: #c0c0c0;
+  flex: 1;
+  padding: 1rem;
+  font-weight: bold;
+}
+.checkout-steps > div.active {
+  border-top-color: #f08000;
+  color: #f08000;
 }
