--- a/whatfire/src/styles/Chat.css
+++ b/whatfire/src/styles/Chat.css
@@ -5,13 +5,13 @@
   
   /* Track */
   ::-webkit-scrollbar-track {
-    background: #f1f1f1;
+    background:transparent;
    
   }
   
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #888;
+    background: rgba(136, 136, 136, 0.37);
     border-radius: 10px;
   }
   
@@ -49,12 +49,13 @@
 
 .chat__Body{
     flex: 1;
-    background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
+    background-image: url("./bg.png");
     background-repeat: repeat;
     background-position: center;
     padding: 10px;
     overflow: scroll;
     display: flex;
+    overflow-x: hidden;
     flex-flow: column;
 }
 
@@ -101,13 +102,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    align-content: center;
     height: 62px;
     border-top: 1px solid lightgray;
 }
 
 .chat__footer > form{
+    margin-top: 10px;
     flex: 1;
     display: flex;
+    flex-flow: row;
 }
 
 .chat__footer > form > input{
@@ -116,10 +120,6 @@
     padding: 10px;
     border: none;
     outline-width: 0;
-}
-
-.chat__footer > form > button{
-    display: none;
 }
 
 .chat__footer > .MultiSvgIcon-root{
