--- a/whatfire/src/styles/SidebarChat.css
+++ b/whatfire/src/styles/SidebarChat.css
@@ -1,8 +1,10 @@
 .sidebarChat{
     display: flex;
     padding: 20px;
+    flex-flow: column;
     cursor: pointer;
     border-bottom: 1px solid #f6f6f6;
+    transition: all ease-in-out 0.4s;
 }
 
 .sidebarChat:hover{
@@ -10,7 +12,7 @@
 }
 
 .sidebarChat__info > h2{
-    font-size: 16px;
+    font-size: 14px;
     margin-bottom: 8px;
 }
 
